CSS file updated

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -321,9 +321,7 @@ jQuery(document).ready(function(){
                  <div class="line"></div>
                 </div>
                 
-                <div class="more-new">
-               <a href="javascript:void(0)"> More </a>
-               </div>
+                <div class="more-new"> <a href="javascript:void(0)"> More </a> </div>
                 
             
                  </div>
