--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -268,7 +268,7 @@ $('.masterTooltip').hover(function(){
                                 </div>
                             </div>
                             
-                            
+                            <%= f.hidden_field :user_id, :value=> current_user.id %>
                             <div class="post-bg-row">
                               
                                Comments<span class="question"><a href="#" title="Lorem ipsum dolor si amet consecte" class="masterTooltip">?</a></span>
