--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -94,7 +94,7 @@
                   <div class="clear"></div> 
                  <div class="learn_more"> <a href="#work"><p style="margin:-40px 0 60px 480px; color:#dbdddf;">Learn more</p></a>.
                  
-                     <a href="#myAnchor"> <img src="/assets/down_arrow1.png"></a> </div> 
+                     <a href="#myAnchor" id="myAnchor"> <img src="/assets/down_arrow1.png"></a> </div> 
                       
                      
                 <div id="work">
