--- a/app/views/bookings/rating.html.erb
+++ b/app/views/bookings/rating.html.erb
@@ -11,7 +11,7 @@ input[type="checkbox"]:not(old) + label, input[type="radio"]:not(old) + label { 
 width:380px;
 
 background:#FFF;
-border:1px #eeeeee solid; 
+/*border:1px #eeeeee solid;*/ 
 
 }
 .booking-btn{
@@ -46,8 +46,17 @@ padding-left:20px;
     padding-top: 30px;
 }
 
-</style>
+#facebox .content {
+    background: none repeat scroll 0 0 #fff;
+    border-radius: 4px;
+    display: table;
+    height: 330px;
+    padding: 10px;
+    width: 100%;
+}
 
+</style>
+<div class="content"> 
 <%#= stylesheet_link_tag 'bookreviews.css','font-awesome.css' %>
 <div class="boxpop-up">
   <div class="heading">Rate</div>
@@ -61,9 +70,9 @@ padding-left:20px;
           <%= f.radio_button(:rating, "2") %><%= f.label(:rating.to_s + "_2") %>
           <%= f.radio_button(:rating, "1") %><%= f.label(:rating.to_s + "_1") %>
          </fieldset><br><br><br>
-        <%= f.text_area :comments ,:placeholder => "Review",:cols=>"30", :style=>"width: 337px; height: 90px;"%>
+        <%= f.text_area :comments ,:placeholder => "Review",:cols=>"30", :style=>"width: 337px; height: 126px;  margin-top: -60px;"%>
         <%= f.submit "Add Review", :class=>"booking-btn" %>
       <% end %>
     </div>
 </div>
-
+</div>
