--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -207,19 +207,19 @@ $('.masterTooltip').hover(function(){
                               <%= f.text_field :address, :class => "small" %>
                             </li>
                             <li><label>Street address</label> 
-                              <input type="text" value="">
+                              <%= f.text_field :street_add, :class => "small" %>
                             </li>
                             <li class="small"><label>Apt # <span style="color:#78838e; font-size:10px">Optional</span></label> 
-                              <input type="text" value="">
+                              <%= f.text_field :apt, :class => "small" %>
                             </li>
                             <li><label>City</label> 
-                              <input type="text" value="">
+                              <%= f.text_field :city, :class => "small" %>
                             </li>
                             <li class="small"><label>State</label> 
-                              <input type="text" value="">
+                              <%= f.text_field :state, :class => "small" %>
                             </li>
                             <li class="small"><label>Zip code</label> 
-                              <input type="text" value="">
+                              <%= f.text_field :zip_code, :class => "small" %>
                             </li>
                             </ul>
                             </div>
