--- a/app/views/payement_transfers/search_payments.html.erb
+++ b/app/views/payement_transfers/search_payments.html.erb
@@ -23,6 +23,11 @@ To Date :
 
   <%= submit_tag "Search", :class => "btn btn-primary contact-form"  %> 
   <%end%>
+      <div  style="text-align:right;margin-left:10px;">
+            <a href="<%= search_payments_path(params.merge(format: "xls")) %>" class="btn btn-secondary"><img src="/assets/excel.png" alt=""> Excel</a> 
+            <a href="<%= search_payments_path(params.merge(format: "pdf"))  %>" class="btn btn-secondary" target="_blank"><i class="icon"><img src="/assets/pdf.png" alt=""></i> PDF</a><br><br>
+     </div>
+
 <table class="table table-striped">
 <tr>
 <th>Sr No.</th>
@@ -37,7 +42,7 @@ To Date :
 <th>Money Transfer</th>
 <th>Check Status</th>
 </tr>
-<% @bookings.each_with_index do |booking, index|%>
+<% @payment_transfers.try(:each_with_index) do |booking, index|%>
 <tr>
 
 <td><%= index + 1 %></td>
@@ -45,17 +50,17 @@ To Date :
 <td><%= Post.find(booking.post_id).area %></td>
 <td><%= User.find(booking.poster_id).name %></td>
 <td><%= Post.find(booking.post_id).address %></td>
-	
+  
  <td><%= Post.find(booking.post_id).pick_up_avaibilty_start_date.strftime("%d-%m-%Y") %> - <%= Post.find(booking.post_id).pick_up_avaibility_end_date.strftime("%d-%m-%Y")%>
-	</td>
+  </td>
  <td><%= Post.find(booking.post_id).drop_off_avaibility_start_date.strftime("%d-%m-%Y")%> - <%= Post.find(booking.post_id).drop_off_avaibility_end_date.strftime("%d-%m-%Y")%></td>
-	
+  
 <td><%= link_to "View Details",{:controller => 'bookings', :action => 'show', :id => booking.id} %></td>
 <td><%= booking.status.camelize rescue nil %>
-	
+  
 <td>
-  <% unless booking.stripe_transfer_id.present? %>	
-	<%= link_to "Money Transfer",transfer_money_payement_transfers_path(:booking_id =>booking.id,:poster_id =>booking.poster_id,:finder_id=>booking.user_id) %>
+  <% unless booking.stripe_transfer_id.present? %>  
+  <%= link_to "Money Transfer",transfer_money_payement_transfers_path(:booking_id =>booking.id,:poster_id =>booking.poster_id,:finder_id=>booking.user_id) %>
   <% else %>
      -----
   <% end %>
