--- a/app/views/comments/books.js.erb
+++ b/app/views/comments/books.js.erb
@@ -1,6 +1,6 @@
-$('.comments').append('<%= escape_javascript(render(:partial => 'comments/book_comment', :locals => {:comments => @comments }))%>');
-$('a.load-more-posts').attr('href', '<%= books_comments_path(:post_id => params[:post_id], :page => @comments.next_page) %>');
+$('#ref_comment').append('<%= escape_javascript(render(:partial => 'comments/book_comment', :locals => {:comments => @comments }))%>');
+$('a.more').attr('href', '<%= books_comments_path(:post_id => params[:post_id], :page => @comments.next_page) %>');
  
 <% unless @comments.next_page %>
-  $('a.load-more-posts').remove();
+  $('a.more').remove();
 <% end %>
