--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -285,32 +285,10 @@ jQuery(document).ready(function(){
                   </div>
                   </div>
 
-                 <div class="p1" style="width:480px; margin-left:14px;">
-                 
-                           <div class="new_para1" style="float:left">
-                               <p class="sed_h">Juliette</p>
-                               <p class="sed1">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae                                ab illo  inventore veritatis  et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                                <h4 class="bottom1"> October 2014</h4>
-                               <div class="line"></div>
-                          </div>
-                
-                 
-                 
-                          <div class="new_para1" style="float:right;">
-                               <p class="sed_h">Juliette</p>
-                               <p class="sed1">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae                                 abillo  inventore veritatis  et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                               <h4 class="bottom1"> October 2014</h4>
-                               <div class="line"></div>
-                         </div>
-                         
-                         
-                         
-                </div>
-                 
-                
-                
-                <div class="more-new"> <a href="javascript:void(0)"> More </a> </div>
-                
+
+                    <div class="p1" style="width:480px; margin-left:14px;" id="ref_comment">  
+                      
+                    </div>
             
                  </div>
                   
