--- a/app/views/bookings/cancel_popup.html.erb
+++ b/app/views/bookings/cancel_popup.html.erb
@@ -1,22 +1,121 @@
+<style>
 
-<div style="width:400px;">
-<h4>Cancel Booking</h4>
+.boxpop-up
+{
+width:380px;
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et varius eros, pretium scelerisque tortor. Duis in sem eu diam vehicula hendrerit at ac magna</p>
+background:#FFF;
+/*border:1px #eeeeee solid;*/	
 
-<a href="#">Learn more</a>
-
-	<div class="actions" >
-		
-		<% if @booking.is_cancel == true %>
-			<%= link_to "Already Booking", "javascript:void(0)", :class => "book", :style=>"margin:0; padding: 6px 45px; position: unset; font-size: 14px;" %>
-		<% else %>
-    	<%= link_to "Cancel Booking", cancel_booking_bookings_path(:drop_off_date =>params[:drop_off_date],:id =>params[:id]), :class => "blue-btn b-mar" %>
-    	<% end %>
-  	</div>
-
-
-</div>
+}
+.booking-btn{
+    background: #00b4ff;
+	padding:10px 10px 8px;
+	font-size:15px; 
+	text-align:center;	
+	font-family:brandon4;
+	width:50%;
+	margin-left:171px;
+	margin-top:30px;
+	border:2px #00b4ff solid;
+		}
+.booking-btn a{
+text-decoration:none;
+ color:#ffffff;
+	}
+.alredy-btn{
+    background: #ffffff;
+	padding:10px 10px 8px;
+	font-size:15px; 
+	text-align:center;	
+	font-family:brandon4;
+	width:50%;
+    margin-left:140px;
+	margin-top:30px;
+	border:2px #ccc solid;
+		}
+.alredy-btn a{
+text-decoration:none;
+ color:#00b4ff;
+	}	
 	
-<br/>
+	
+.link-more a
+{
+text-decoration:none;
+color:#00b4ff;
+font-size:12px;	
+padding-left:20px;
+font-family: brandon4;	
+	}
+	
+.paragraph-new
+{
+width:86%;	
+font-size:11px;
+color:#b0b4b8;
+margin-top:50px;
+padding-left:20px;
+font-family: brandon4;	
+	}
+.heading
+{
+padding-left:20px;
+color:#14263a;
+padding-top:30px;
+font-family: brandon4;
+		
+	}
+.cancel-btn{margin-top:20px}
+.cancel-btn a
+{
+
+text-decoration:none;
+padding-top:13px;
+color:#ccc;	
+font-size:12px;
+margin-left:329px;
+font-family: brandon4;
+}
+
+#facebox .content {
+    background: none repeat scroll 0 0 #fff;
+    border-radius: 4px;
+    display: table;
+    height: 342px;
+    padding: 10px;
+    width: 100%;
+}
+	
+		
+</style>
+
+<div class="content">
+	<div class="boxpop-up">
+		<div class="heading">Cancel booking</div>
+
+		<div class="paragraph-new">
+			<p>
+			  Integer posuere erat a ante venenatisInteger posuere erat a ante venenatis dapibus posuere velit aliquet. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			</p>
+	    </div>
+
+		<div class="link-more">
+		  <a href="#">Learn more</a>
+		</div>
+
+		<% if @booking.is_cancel == true %>
+		    <div class="alredy-btn">
+			  <%= link_to "Already Booking", "javascript:void(0)" %>
+			</div>
+		<% else %>
+		    <div class="booking-btn">
+		      <%= link_to "Cancel Booking", cancel_booking_bookings_path(:drop_off_date =>params[:drop_off_date],:id =>params[:id])%>
+		    </div>
+		<% end %>
+		<div class="cancel-btn">
+	      <a href="#">Cancel</a>
+	    </div>
+	</div>
+</div>
 
