--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -79,7 +79,7 @@
               <li><%= link_to "My Order/Received",order_receives_path%></li>
               <li class="active"><%= link_to "My Booking", bookings_path%></li>
               <li><%= link_to "Payment", nil%></li>
-              <li><%= link_to "Message", {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post} rescue nil %></li>
+              <li><%= link_to "Message", {:controller => '/messages',:action => 'is_read_all', :id =>@post.user_id,:method => :post} rescue nil %></li>
             </ul>
             
             <div class="right-side">
