--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -129,6 +129,30 @@
 	jQuery(document).ready(function() {
 		jQuery("#refresh_msg").load('<%= refresh_message_messages_path(:recv_id=>"#{params[:recv_id]}") %>');
 
+
+    	jQuery("#message_body").keyup(function (e) {
+
+        var code = (e.keyCode ? e.keyCode : e.which);
+        
+        var text_title = this.form.message_body.value;
+	      
+		   if(text_title != ''){
+
+		      jQuery('input[type="submit"]').addClass('msg_active');
+
+		      if (code == 13) {
+	        	
+	            $("#reply_message").submit();
+	            return true;
+	         }
+		   } 
+		   if(text_title == '')
+			{
+				jQuery('input[type="submit"]').removeClass('msg_active');
+			}
+
+		});
+
 	});
 
 	var refreshId = setInterval(function()
